[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
autoagents-derive = { git = "https://github.com/liquidos-ai/AutoAgents", branch = "scratch/add_ractor_cluster" }
autoagents = { git = "https://github.com/liquidos-ai/AutoAgents", branch = "scratch/add_ractor_cluster", features = [
    "openai",
    "logging",
    "cluster",
] }
async-trait = "0.1.89"
clap = { version = "4.5.46", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = "1.47.1"
tokio-stream = "0.1.17"
iced = "0.13.1"
async-std = "1.13"
